<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/protanopiaButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:minWidth="170dp"
            android:minHeight="150dp"
            android:onClick="startProtanopiaActivity"
            android:text="@string/protanopia"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/deuteranopiaButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:minWidth="170dp"
            android:minHeight="150dp"
            android:onClick="startDeuteranopiaActivity"
            android:text="@string/deuteranopia"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/tritanopiaButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:minWidth="170dp"
            android:minHeight="150dp"
            android:onClick="startTritanopiaActivity"
            android:text="@string/tritanopia"/>

    </LinearLayout>

</LinearLayout>
